# discord_bot-rs

./: .gitignore  Cargo.toml  README.md  tmp
.github/workflows/: rust.yml
src/: botlib.rs  commands.rs  main.rs
src/commands/: ban.rs  famfos_macros.rs  help.rs  kick.rs  poll.rs  unban.rs
