[package]
name = "discord_bot-rs"
version = "0.1.0"
authors = ["famfo <tf2005@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio={ version = "1.*", features = ["full"] }
systemstat = "*"

[dependencies.serenity]
default-features=false
features=[
        "builder", 
        "client", 
        "framework", 
        "gateway", 
        "http", 
        "model", 
        "standard_framework", 
        "utils", 
        "rustls_backend",
        "unstable_discord_api",
        "cache",
        ]

version="*" 
