# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

[package]
name = "discord_bot-rs"
version = "0.1.1"
authors = ["famfo <famfo@protonmail.com>"]
edition = "2018"
license = "MPL v2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio={ version = "1.*", features = ["full"] }
systemstat = "*"
songbird = "*"

[dependencies.serenity]
default-features=false
features=[
        "builder", 
        "client", 
        "framework", 
        "gateway", 
        "http", 
        "model", 
        "standard_framework", 
        "rustls_backend",
        "cache",
        "voice",
        ]

version="*" 

