# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

[package]
name = "discord_bot-rs"
version = "0.1.1"
authors = ["famfo <famfo@protonmail.com>"]
edition = "2018"
license = "MPL v2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio={ version = "1.10", features = ["full"] }
dotenv = "0.15"

futures = "0.3"
twilight-cache-inmemory = "0.6"
twilight-gateway = "0.6"
twilight-http = "0.6"
twilight-model = "0.6"
twilight-embed-builder = "0.6"
